--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,33 @@
 <html>
   <head>
     <title>CSS/HTML Workshop with Privateaser</title>
+    <link rel="stylesheet" href="index.css">
   </head>
-  <body>
-    <div id="bar">
-      <input class="js-name" type="text" placeholder="Bar name"/>
-      <input class="js-price-by-hour" type="number" placeholder="Price by hour"/>
-      <input class="js-price-by-person" type="number" placeholder="Price by person"/>
+  <body >
+
+    <div class="b">
+      <div id="bar" >
+        <p>Bar Informations</p>
+        <div><input class="js-name" type="text" placeholder="Bar name"/></div>
+        <div><input class="js-price-by-hour" type="number" placeholder="Price by hour"/></div>
+        <div><input class="js-price-by-person" type="number" placeholder="Price by person"/></div>
+      </div>
+      <div id="booker">
+        <p>Booker Informations</p>
+        <div><input class="js-name" type="text" placeholder="Booker name"/></div>
+        <div><input class="js-time" type="number" placeholder="Time in h"/></div>
+        <div><input class="js-persons" type="number" placeholder="Persons"/></div>
+        <div><label>Deductible option : </label><input class="js-option" type="checkbox" placeholder="Deductible option"/></div>
+      </div>
+
     </div>
-    <div id="booker">
-      <input class="js-name" type="text" placeholder="Booker name"/>
-      <input class="js-time" type="number" placeholder="Time in h"/>
-      <input class="js-persons" type="number" placeholder="Persons"/>
-      <input class="js-option" type="checkbox" placeholder="Deductible option"/>
+
+    <div class="b">
+      <button id="compute" style="margin-top : 10px;">Compute</button>
+      <div id="actors"></div>
+      <script src="privateaser.js"></script>
+      <script src="index.js"></script>
     </div>
-    <button id="compute">Compute</button>
-    <div id="actors"></div>
-    <script src="privateaser.js"></script>
-    <script src="index.js"></script>
+	 </div>
   </body>
 </html>
