--- a/public/index.html
+++ b/public/index.html
@@ -5,30 +5,35 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body >
-
-    <div class="b">
-      <div id="bar" >
-        <p>Bar Informations</p>
-        <div><input class="js-name" type="text" placeholder="Bar name"/></div>
-        <div><input class="js-price-by-hour" type="number" placeholder="Price by hour"/></div>
-        <div><input class="js-price-by-person" type="number" placeholder="Price by person"/></div>
-      </div>
-      <div id="booker">
-        <p>Booker Informations</p>
-        <div><input class="js-name" type="text" placeholder="Booker name"/></div>
-        <div><input class="js-time" type="number" placeholder="Time in h"/></div>
-        <div><input class="js-persons" type="number" placeholder="Persons"/></div>
-        <div><label>Deductible option : </label><input class="js-option" type="checkbox" placeholder="Deductible option"/></div>
-      </div>
-
+    <div class="header">
+      <p align="center" style="margin-top:0;margin-bottom:0;"><img src="https://www.privateaser.com/static/img/logo-privateaser.svg" alt="Privateaser" style="height: 45px;
+width: 180px;"></p>
     </div>
+    <div class = body>
+      <div class="b">
+        <div id="bar" >
+          <p>Bar Informations</p>
+          <div><input class="js-name" type="text" placeholder="Bar name"/></div>
+          <div><input class="js-price-by-hour" type="number" placeholder="Price by hour"/></div>
+          <div><input class="js-price-by-person" type="number" placeholder="Price by person"/></div>
+        </div>
+        <div id="booker">
+          <p>Booker Informations</p>
+          <div><input class="js-name" type="text" placeholder="Booker name"/></div>
+          <div><input class="js-time" type="number" placeholder="Time in h"/></div>
+          <div><input class="js-persons" type="number" placeholder="Persons"/></div>
+          <div><label>Deductible option : </label><input class="js-option" type="checkbox" placeholder="Deductible option"/></div>
+        </div>
 
-    <div class="b">
-      <button id="compute" style="margin-top : 10px;">Compute</button>
-      <div id="actors"></div>
-      <script src="privateaser.js"></script>
-      <script src="index.js"></script>
-    </div>
-	 </div>
+      </div>
+
+      <div class="b">
+        <button id="compute" style="margin-top : 10px;">Compute</button>
+        <div id="actors"></div>
+        <script src="privateaser.js"></script>
+        <script src="index.js"></script>
+      </div>
+  	 </div>
+   </div>
   </body>
 </html>
